--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,14 +6,25 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">
+    You can also find my articles on
+    <a href="{{ site.author.googlescholar }}">my Google Scholar profile</a>.
+  </div>
 {% endif %}
 
 {% include base_path %}
 
+<!-- DEBUG: mostra quante pubblicazioni vede Jekyll -->
+<p><strong>DEBUG:</strong> ho trovato {{ site.publications | size }} pubblicazioni.</p>
+<ul>
+  {% for post in site.publications %}
+    <li>{{ post.title }} ({{ post.path }})</li>
+  {% endfor %}
+</ul>
+
 <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
-  {% for category in site.publication_category  %}
+  {% for category in site.publication_category %}
     {% assign title_shown = false %}
     {% for post in site.publications reversed %}
       {% if post.category != category[0] %}
@@ -31,6 +42,3 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
-
-
-
