--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,7 +14,7 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- DEBUG: mostra quante pubblicazioni vede Jekyll -->
+<!-- DEBUG: quante pubblicazioni trova Jekyll? -->
 <p><strong>DEBUG:</strong> ho trovato {{ site.publications | size }} pubblicazioni.</p>
 <ul>
   {% for post in site.publications %}
@@ -22,7 +22,6 @@ author_profile: true
   {% endfor %}
 </ul>
 
-<!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
   {% for category in site.publication_category %}
     {% assign title_shown = false %}
