--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,43 +1,17 @@
 ---
-layout: single
+layout: page
 title: "Publications"
 permalink: /publications/
-author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">
-    You can also find my articles on
-    <a href="{{ site.author.googlescholar }}">my Google Scholar profile</a>.
-  </div>
-{% endif %}
+<h1>Publications</h1>
 
-{% include base_path %}
-
-<!-- DEBUG: quante pubblicazioni trova Jekyll? -->
-<p><strong>DEBUG:</strong> ho trovato {{ site.publications | size }} pubblicazioni.</p>
 <ul>
+  <!-- elenco semplicissimo senza includes esterni -->
   {% for post in site.publications %}
-    <li>{{ post.title }} ({{ post.path }})</li>
+    <li>
+      <strong>{{ post.title }}</strong>
+      {% if post.date %}({{ post.date | date: "%Y" }}){% endif %}
+    </li>
   {% endfor %}
 </ul>
-
-{% if site.publication_category %}
-  {% for category in site.publication_category %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
